# backup

./: README.md
2018-9-13/grc/: CMakeLists.txt  SCMA_changeTag.xml  SCMA_constellation.xml  SCMA_decode.xml  SCMA_encode.xml  SCMA_packet_test.xml  SCMA_test.xml
2018-9-13/include/SCMA/: CMakeLists.txt  api.h  changeTag.h  constellation_SCMA.h  decode.h  encode.h  equalizer_SCMA.h  header_packet_SCMA.h  metric_type.h  packet_test.h  test.h  test1.h
2018-9-13/lib/: CMakeLists.txt  changeTag_impl.cc  changeTag_impl.h  constellation_SCMA.cc  decode_impl.cc  decode_impl.h  encode_impl.cc  encode_impl.h  equalizer_SCMA.cc  header_packet_SCMA.cc  packet_test.cc  qa_SCMA.cc  qa_SCMA.h  qa_changeTag.cc  qa_changeTag.h  qa_constellation.h  qa_decode.cc  qa_decode.h  qa_encode.cc  qa_encode.h  qa_packet_test.cc  qa_packet_test.h  qa_test1.cc  qa_test1.h  test1.cc  test_SCMA.cc
2018-9-13/swig/: CMakeLists.txt  SCMA_swig.i  constellation_SCMA.i  equalizer_SCMA.i  header_SCMA.i
